    "AUTOMATED_TESTING" environment variables is set).

    Added the random_name() and camel_case() functions to Badger::Utils.
    Also add some extra debugging code to params() and self_params() to
    catch any attempt to pass an odd number of arguments.

    Added the debugf() and debug_at() methods to Badger::Debug.

    Added the auto_can() method to Badger::Class::Methods.

  Version 0.06
    Added copy_file() and move_file() to Badger::Filesystem and copy() and
    move() methods to Badger::Filesystem::File.

    Added chmod_path() to Badger::Filesystem and chmod() to
    Badger::Filesystem::Path.

    Added Bin() to Badger::Filesystem.

    Added the encoding() method to Badger::Filesystem::File for specifying
    the encoding of a file, along with the utf8(), bytes(), crlf() and raw()
    methods for enabling different encoding layers.

    Added the codec() method to Badger::Filesystem::File for specifying a
    serialisation codec to use in conjunction with the new data() method.

    Added Badger::Timestamp. This is returned by the new created(),
    accessed() and modified() methods in Badger::Filesystem::Path.

    Added Badger::Logic.

    Added Badger::Log and Badger::Log::File.

    Added numlike() to Badger::Utils as an alias for "looks_like_number".
    It's the numerical counterpart to textlike() and is significantly easier
    to type.

    Added debug_msg() to Badger::Base. Also added the "Badger::Base::Trial"
    class definition for use with the try() method.

    Added lib import hook to Badger.

    Added bclass as an alias for class in Badger::Class.

    Changed Badger::Class::Config to maintain the order of configuration
    parameters where possible (i.e. when expressed as a list ref rather than
    a hash ref). Also added "target:var" fallback which looks in the target
    object or hash ref for the variable. This allows options to default to
    the values set by preceeding options.
