@@ -22,3 +22,6 @@ pm_to_blib
 ^t/log/logs
 ^pod/Badger/Advent2008
 t/filesystem/testfiles/encoded.str
+t/filesystem/testfiles/group_write
+t/filesystem/testfiles/gw2
+
